--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ body {
 }
 
 .app__body {
-  height: 90vh;
-  width: 90vw;
+  /* height: 90vh;
+  width: 90vw; */
   background-color: #ededed;
   box-shadow: -1px 4px 20px -6px #000;
   display: flex;
