--- a/src/front.css
+++ b/src/front.css
@@ -1,12 +1,68 @@
 .front {
-    flex: 0.35;
-    background-color: #fff;
+    flex: 0.40;
+    background-color: #ededed;
 }
 
 .front__container {
     display: flex;
     justify-content: space-between;
+    padding: 15px;
+    background-color: #ededed;
+    flex-direction: column;
+}
+
+.front__body {
+    display: flex;
+    justify-content: space-between;
     padding: 20px;
     background-color: #ededed;
     flex-direction: column;
+}
+
+.front__footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10%;
+    background-color: #ffffff;
+    flex-direction: column;
+}
+
+.suggest {
+    border-radius: 12px;
+    font: bold 1rem sans-serif;
+    margin: 1.2rem;
+    padding: 1rem;
+    outline-offset: 0.5rem;
+    text-align: center;
+    box-shadow:
+        0 0 2px 4px rgba(200,230,255,0.5),
+        0 -2px 2px 3px rgba(200,230,255,0.5) inset,
+        0 0 2px 10px rgba(100,150,255,0.9),
+        0 0 2px 7px rgba(100,150,255,1) inset,
+        0 0 12px 13px rgba(0,50,255,0.9),
+        0 0 12px 11px rgba(0,50,255,0.7) inset,
+        0 8px 30px 18px rgba(0,0,0,0.8),
+        0 8px 25px 12px rgba(0,0,0,0.7) inset;
+
+    color: #fff;
+    text-shadow:
+        0 0 7px rgb(0, 0, 0),
+        0 0 10px rgb(0, 0, 0),
+        0 0 21px rgb(0, 0, 0),
+        0 0 42px rgb(26, 0, 144),
+        0 0 82px rgb(26, 0, 144),
+        0 0 92px rgb(26, 0, 144),
+        0 0 102px rgb(26, 0, 144),
+        0 0 151px rgb(26, 0, 144);
+}
+
+.front__footer {
+    background-color: #ededed;
+    align-items: center;
+}
+
+.poster {
+    background-image: url(./image/mask.jpeg);
+    height: 60%;
+    width: 60%;
 }
